Bug 791413: Exit early when bluetooth property types don't match; r=cjones